--- a/src/components/post-item/style.scoped.scss
+++ b/src/components/post-item/style.scoped.scss
@@ -199,5 +199,6 @@
 
   div {
     background-size: cover;
+    background-position: center;
   }
 }
